@@ -3,6 +3,7 @@
 ################################################################################
 
 nxTools v1.0.3 (not released):
+  NEW: Display pre areas on multiple lines if necessary (word wrapping).
   CHG: Updated nxHelper to v2.3.0, new global-interp key functions.
   FIX: Possible crashes using "SITE OPEN/CLOSE" due to ioFTPD's buggy
        global-interp "var get/set" command.
